...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Rx0-b1-4DJ">
                                <rect key="frame" x="40" y="84" width="334" height="360"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Quk-ca-qXM">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="Hko-ou-9v8"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wkr-uf-WpK">
                                        <rect key="frame" x="0.0" y="65" width="334" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="pqA-Yy-zth"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DiU-ge-79N">
                                        <rect key="frame" x="0.0" y="130" width="334" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="BNG-Xt-Jea"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vlq-3P-vUN">
                                        <rect key="frame" x="0.0" y="195" width="334" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="uMS-Dc-nIB"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYL-ae-8yb">
                                        <rect key="frame" x="0.0" y="320" width="334" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="WL8-32-Sc2"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Already Signed In?"/>
                                        <connections>
                                            <action selector="signedInButton:" destination="d6o-jI-zJG" eventType="touchUpInside" id="DUl-Hy-saH"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gkQ-hD-VpO">
                                        <rect key="frame" x="0.0" y="130" width="334" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="UPa-N9-ADF"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Sign In"/>
                                        <connections>
                                            <action selector="signInButton:" destination="0ZD-qc-8sv" eventType="touchUpInside" id="MvX-l1-vAI"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thk-fY-lss">
                                        <rect key="frame" x="0.0" y="190" width="334" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="l1q-lm-uJw"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Create Account"/>
                                        <connections>
                                            <action selector="createAccountButton:" destination="0ZD-qc-8sv" eventType="touchUpInside" id="qDn-Z8-tqT"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
