...
            DispatchQueue.main.async {
                self.applySnapshot()
            }
        }
        
        //SignOut Button
        let logOutBarButtonItem = UIBarButtonItem(title: "Sign out", style: .plain, target: self, action: #selector(signOutButton))
        self.navigationItem.rightBarButtonItem = logOutBarButtonItem
    }
    
    //SignOut func
    @objc func signOutButton(){
        signInViewModel.signOut { error in
...
